bindings/c/include/wickra.h

typedef struct AdaptiveCycle AdaptiveCycle;
typedef struct AdaptiveLaguerreFilter AdaptiveLaguerreFilter;
typedef struct AdaptiveRsi AdaptiveRsi;
typedef struct Alma Alma;
typedef struct AnchoredRsi AnchoredRsi;
typedef struct Apo Apo;
typedef struct Autocorrelation Autocorrelation;
typedef struct AutocorrelationPeriodogram AutocorrelationPeriodogram;
typedef struct AverageDrawdown AverageDrawdown;
typedef struct BandpassFilter BandpassFilter;
typedef struct BipowerVariation BipowerVariation;
typedef struct BollingerBandwidth BollingerBandwidth;
typedef struct BurkeRatio BurkeRatio;
typedef struct CalmarRatio CalmarRatio;
typedef struct CenterOfGravity CenterOfGravity;
typedef struct Cfo Cfo;
typedef struct Cmo Cmo;
typedef struct CoefficientOfVariation CoefficientOfVariation;
struct AdaptiveCycle *wickra_adaptive_cycle_new(void);
double wickra_adaptive_cycle_update(struct AdaptiveCycle *handle, double value);
void wickra_adaptive_cycle_batch(struct AdaptiveCycle *handle,
                                 const double *input,
                                 double *out,
                                 uintptr_t n);
void wickra_adaptive_cycle_reset(struct AdaptiveCycle *handle);
void wickra_adaptive_cycle_free(struct AdaptiveCycle *handle);
struct AdaptiveLaguerreFilter *wickra_adaptive_laguerre_filter_new(uintptr_t period);
double wickra_adaptive_laguerre_filter_update(struct AdaptiveLaguerreFilter *handle, double value);
void wickra_adaptive_laguerre_filter_batch(struct AdaptiveLaguerreFilter *handle,
                                           const double *input,
                                           double *out,
                                           uintptr_t n);
void wickra_adaptive_laguerre_filter_reset(struct AdaptiveLaguerreFilter *handle);
void wickra_adaptive_laguerre_filter_free(struct AdaptiveLaguerreFilter *handle);
struct AdaptiveRsi *wickra_adaptive_rsi_new(uintptr_t period);
double wickra_adaptive_rsi_update(struct AdaptiveRsi *handle, double value);
void wickra_adaptive_rsi_batch(struct AdaptiveRsi *handle,
                               const double *input,
                               double *out,
                               uintptr_t n);
void wickra_adaptive_rsi_reset(struct AdaptiveRsi *handle);
void wickra_adaptive_rsi_free(struct AdaptiveRsi *handle);
struct Alma *wickra_alma_new(uintptr_t period, double offset, double sigma);
double wickra_alma_update(struct Alma *handle, double value);
void wickra_alma_batch(struct Alma *handle, const double *input, double *out, uintptr_t n);
void wickra_alma_reset(struct Alma *handle);
void wickra_alma_free(struct Alma *handle);
struct AnchoredRsi *wickra_anchored_rsi_new(void);
double wickra_anchored_rsi_update(struct AnchoredRsi *handle, double value);
void wickra_anchored_rsi_batch(struct AnchoredRsi *handle,
                               const double *input,
                               double *out,
                               uintptr_t n);
void wickra_anchored_rsi_reset(struct AnchoredRsi *handle);
void wickra_anchored_rsi_free(struct AnchoredRsi *handle);
struct Apo *wickra_apo_new(uintptr_t fast, uintptr_t slow);
double wickra_apo_update(struct Apo *handle, double value);
void wickra_apo_batch(struct Apo *handle, const double *input, double *out, uintptr_t n);
void wickra_apo_reset(struct Apo *handle);
void wickra_apo_free(struct Apo *handle);
struct Autocorrelation *wickra_autocorrelation_new(uintptr_t period, uintptr_t lag);
double wickra_autocorrelation_update(struct Autocorrelation *handle, double value);
void wickra_autocorrelation_batch(struct Autocorrelation *handle,
                                  const double *input,
                                  double *out,
                                  uintptr_t n);
void wickra_autocorrelation_reset(struct Autocorrelation *handle);
void wickra_autocorrelation_free(struct Autocorrelation *handle);
struct AutocorrelationPeriodogram *wickra_autocorrelation_periodogram_new(uintptr_t min_period,
                                                                          uintptr_t max_period);
double wickra_autocorrelation_periodogram_update(struct AutocorrelationPeriodogram *handle,
                                                 double value);
void wickra_autocorrelation_periodogram_batch(struct AutocorrelationPeriodogram *handle,
                                              const double *input,
                                              double *out,
                                              uintptr_t n);
void wickra_autocorrelation_periodogram_reset(struct AutocorrelationPeriodogram *handle);
void wickra_autocorrelation_periodogram_free(struct AutocorrelationPeriodogram *handle);
struct AverageDrawdown *wickra_average_drawdown_new(uintptr_t period);
double wickra_average_drawdown_update(struct AverageDrawdown *handle, double value);
void wickra_average_drawdown_batch(struct AverageDrawdown *handle,
                                   const double *input,
                                   double *out,
                                   uintptr_t n);
void wickra_average_drawdown_reset(struct AverageDrawdown *handle);
void wickra_average_drawdown_free(struct AverageDrawdown *handle);
struct BandpassFilter *wickra_bandpass_filter_new(uintptr_t period, double bandwidth);
double wickra_bandpass_filter_update(struct BandpassFilter *handle, double value);
void wickra_bandpass_filter_batch(struct BandpassFilter *handle,
                                  const double *input,
                                  double *out,
                                  uintptr_t n);
void wickra_bandpass_filter_reset(struct BandpassFilter *handle);
void wickra_bandpass_filter_free(struct BandpassFilter *handle);
struct BipowerVariation *wickra_bipower_variation_new(uintptr_t period);
double wickra_bipower_variation_update(struct BipowerVariation *handle, double value);
void wickra_bipower_variation_batch(struct BipowerVariation *handle,
                                    const double *input,
                                    double *out,
                                    uintptr_t n);
void wickra_bipower_variation_reset(struct BipowerVariation *handle);
void wickra_bipower_variation_free(struct BipowerVariation *handle);
struct BollingerBandwidth *wickra_bollinger_bandwidth_new(uintptr_t period, double multiplier);
double wickra_bollinger_bandwidth_update(struct BollingerBandwidth *handle, double value);
void wickra_bollinger_bandwidth_batch(struct BollingerBandwidth *handle,
                                      const double *input,
                                      double *out,
                                      uintptr_t n);
void wickra_bollinger_bandwidth_reset(struct BollingerBandwidth *handle);
void wickra_bollinger_bandwidth_free(struct BollingerBandwidth *handle);
struct BurkeRatio *wickra_burke_ratio_new(uintptr_t period);
double wickra_burke_ratio_update(struct BurkeRatio *handle, double value);
void wickra_burke_ratio_batch(struct BurkeRatio *handle,
                              const double *input,
                              double *out,
                              uintptr_t n);
void wickra_burke_ratio_reset(struct BurkeRatio *handle);
void wickra_burke_ratio_free(struct BurkeRatio *handle);
struct CalmarRatio *wickra_calmar_ratio_new(uintptr_t period);
double wickra_calmar_ratio_update(struct CalmarRatio *handle, double value);
void wickra_calmar_ratio_batch(struct CalmarRatio *handle,
                               const double *input,
                               double *out,
                               uintptr_t n);
void wickra_calmar_ratio_reset(struct CalmarRatio *handle);
void wickra_calmar_ratio_free(struct CalmarRatio *handle);
struct CenterOfGravity *wickra_center_of_gravity_new(uintptr_t period);
double wickra_center_of_gravity_update(struct CenterOfGravity *handle, double value);
void wickra_center_of_gravity_batch(struct CenterOfGravity *handle,
                                    const double *input,
                                    double *out,
                                    uintptr_t n);
void wickra_center_of_gravity_reset(struct CenterOfGravity *handle);
void wickra_center_of_gravity_free(struct CenterOfGravity *handle);
struct Cfo *wickra_cfo_new(uintptr_t period);
double wickra_cfo_update(struct Cfo *handle, double value);
void wickra_cfo_batch(struct Cfo *handle, const double *input, double *out, uintptr_t n);
void wickra_cfo_reset(struct Cfo *handle);
void wickra_cfo_free(struct Cfo *handle);
struct Cmo *wickra_cmo_new(uintptr_t period);
double wickra_cmo_update(struct Cmo *handle, double value);
void wickra_cmo_batch(struct Cmo *handle, const double *input, double *out, uintptr_t n);
void wickra_cmo_reset(struct Cmo *handle);
void wickra_cmo_free(struct Cmo *handle);
struct CoefficientOfVariation *wickra_coefficient_of_variation_new(uintptr_t period);
double wickra_coefficient_of_variation_update(struct CoefficientOfVariation *handle, double value);