bindings/csharp/Wickra/Generated/NativeMethods.g.cs

// <auto-generated />
// Generated from bindings/c/include/wickra.h. Do not edit by hand.
using System.Runtime.InteropServices;

namespace Wickra;

internal static partial class NativeMethods
{
    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_adaptive_cycle_new();

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_adaptive_cycle_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_adaptive_cycle_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_adaptive_cycle_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_adaptive_cycle_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_adaptive_laguerre_filter_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_adaptive_laguerre_filter_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_adaptive_laguerre_filter_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_adaptive_laguerre_filter_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_adaptive_laguerre_filter_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_adaptive_rsi_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_adaptive_rsi_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_adaptive_rsi_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_adaptive_rsi_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_adaptive_rsi_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_alma_new(nuint period, double offset, double sigma);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_alma_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_alma_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_alma_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_alma_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_anchored_rsi_new();

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_anchored_rsi_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_anchored_rsi_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_anchored_rsi_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_anchored_rsi_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_apo_new(nuint fast, nuint slow);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_apo_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_apo_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_apo_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_apo_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_autocorrelation_new(nuint period, nuint lag);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_autocorrelation_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_autocorrelation_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_autocorrelation_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_autocorrelation_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_autocorrelation_periodogram_new(nuint minPeriod, nuint maxPeriod);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_autocorrelation_periodogram_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_autocorrelation_periodogram_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_autocorrelation_periodogram_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_autocorrelation_periodogram_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_average_drawdown_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_average_drawdown_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_average_drawdown_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_average_drawdown_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_average_drawdown_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_bandpass_filter_new(nuint period, double bandwidth);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_bandpass_filter_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_bandpass_filter_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_bandpass_filter_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_bandpass_filter_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_bipower_variation_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_bipower_variation_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_bipower_variation_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_bipower_variation_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_bipower_variation_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_bollinger_bandwidth_new(nuint period, double multiplier);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_bollinger_bandwidth_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_bollinger_bandwidth_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_bollinger_bandwidth_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_bollinger_bandwidth_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_burke_ratio_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_burke_ratio_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_burke_ratio_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_burke_ratio_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_burke_ratio_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_calmar_ratio_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_calmar_ratio_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_calmar_ratio_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_calmar_ratio_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_calmar_ratio_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_center_of_gravity_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_center_of_gravity_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_center_of_gravity_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_center_of_gravity_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_center_of_gravity_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_cfo_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_cfo_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_cfo_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_cfo_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_cfo_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_cmo_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_cmo_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_cmo_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_cmo_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_cmo_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_coefficient_of_variation_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_coefficient_of_variation_update(nint handle, double @value);
